Fix Path to html templates for FastAPI Fix Path to css stylesheet for FastAPI Change Character string to be more readable Change result-json textbox to be larger

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -165,7 +165,7 @@ details[open] summary {
 
 #result-json {
     width: 100%;
-    height: 275px;
+    height: 300px;
     font-size: 16px;
     padding: 10px;
 
@@ -367,7 +367,7 @@ details[open] summary {
         font-size: 14px;
         padding: 3px;
         /*allows result box to resize*/
-        resize: none;
+        /*resize: none;*/
     }
 
     #reroll-btn {
